--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   bio              : "Academic Stuff..."
   location         : "Oxford, UK"
   employer         : "University of Oxford"
-  uri              : "protists.co.uk"
+  uri              : "http://protists.co.uk"
   email            : "leonard.guy@biology.ox.ac.uk" 
 
   # Academic websites
